--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="row justify-content-center">
 
-            <form method="post" id="form" name="data_form" class="needs-validation bg-white p-4 rounded col-10 col-md-9 col-sm-8 col-lg-7" novalidate>
+            <form method="post" id="form" name="data_form" action="#" class="needs-validation bg-white p-4 rounded col-10 col-md-9 col-sm-8 col-lg-7" novalidate>
 
                 <h4 id="head" class="col-12 text-center mb-4 mt-1">Contact US</h4>
 
