--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
         
-                <button id="sub_btn" class="btn btn-primary" type="submit" disabled>Submit</button>
+                <button onClick="window.location.reload();" id="sub_btn" class="btn btn-primary" type="submit" disabled>Submit</button>
                 <button id="rst_btn" class="btn btn-secondary" type="reset" disabled>Reset</button>
               </form>
 
